--- a/package.json
+++ b/package.json
@@ -18,14 +18,9 @@
     "element-plus": "^2.9.8",
     "lodash-es": "^4.17.21",
     "p-limit": "^6.2.0",
-    "pdfjs-dist": "^2.16.105",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
-    "vue-pdf": "^4.3.0",
-    "vue-pdf-embed": "^2.1.2",
-    "vue-router": "^4.5.0",
-    "vue3-pdf-preview": "^1.1.2",
-    "vue3-pdfjs": "^0.1.6"
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.1",
