--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "axios": "^1.9.0",
     "cheerio": "^1.0.0",
     "crypto-js": "^4.2.0",
+    "downloadjs": "^1.4.7",
     "element-plus": "^2.9.8",
+    "iconv-lite": "^0.6.3",
     "lodash-es": "^4.17.21",
     "p-limit": "^6.2.0",
     "pinia": "^3.0.1",
@@ -26,6 +28,7 @@
     "@tsconfig/node22": "^22.0.1",
     "@types/axios": "^0.14.4",
     "@types/crypto-js": "^4.2.2",
+    "@types/downloadjs": "^1.4.6",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-vue": "^5.2.3",
