fix:vercel代理单页应用bug

--- a/vercel.json
+++ b/vercel.json
@@ -19,6 +19,10 @@
     {
       "source": "/api/(.*)",
       "destination": "/api/proxy"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
